#55 Hide site number and version column on small screens and fix whitespace wrapping

--- a/sites/dashboard/theme/css/input.css
+++ b/sites/dashboard/theme/css/input.css
@@ -140,9 +140,7 @@
 	}
 
 	.has-tooltip:hover .tooltip {
-	  @apply visible z-50;
-	  width: 180px;
-	  right: -90px;
+	  @apply visible whitespace-nowrap z-50;
 	}
 
 	.embedded a:link, 
